[package]
name = "groth16_veri"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
ark-groth16 = { version = "0.4.0", default-features = false }
ark-std = { version = "=0.4.0", default-features = false}
ark-ec = { version = "=0.4.1" }
ark-bn254 = { version = "=0.4.0" }
ark-crypto-primitives = { version = "=0.4.0", default-features = false  }
ark-relations = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-bls12-377 = { version = "0.4.0", default-features = false, features = ["curve"] }
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false }
